data/all_generated_tests/raw_wast_tests/br_table_StackCorruption_2107.wast
;; 7. **Immediate Encoding Errors:**    - Simulate errors in the immediate encoding of the `br_table` instruction, specifically the label vector, and analyze if improper stack management leads to unexpected stack behavior.

(assert_invalid
  (module (func $immediate-encoding-errors
    (block (br_table 0 0 0) (i32.const 1))
  ))
  "invalid type or immediate encoding"
)